--- a/index.html
+++ b/index.html
@@ -48,6 +48,16 @@
             <option>Subdivede Box</option>
         </select>
 
+
+        <div id="joystick">
+            <button id="up">W</button>
+            <div class="row">
+              <button id="left">A</button>
+              <button id="down">S</button>
+              <button id="right">D</button>
+            </div>
+          </div>
+
         <div id="ui">Generate UI for geometry here</div>
 
 
