--- a/index.html
+++ b/index.html
@@ -49,14 +49,11 @@
         </select>
 
 
-        <div id="joystick">
-            <button id="up">W</button>
-            <div class="row">
-              <button id="left">A</button>
-              <button id="down">S</button>
-              <button id="right">D</button>
-            </div>
-          </div>
+    
+
+        <div id="joystick-container">
+            <div id="joystick-handle"></div>
+        </div>
 
         <div id="ui">Generate UI for geometry here</div>
 
