--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
         </textarea>
         
         <select id="shape" onchange="InitShaders();">
-            <option selected>Triangle</option>
+            <option >Triangle</option>
             <option>Quad</option>
             <option>Box</option>
-            <option>Subdivede Box</option>
+            <option selected>Subdivede Box</option>
         </select>
 
 
