klik markering - til videreudvikling af extrution

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <select id="shape" onchange="InitShaders();">
             <option >Triangle</option>
             <option>Quad</option>
+            <option>Blank Box</option>
             <option>Box</option>
             <option selected>Subdivede Box</option>
         </select>
